Bug 1732498 - Duration of nsISpeechTask should be second. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D127221