dom/media/webspeech/synth/windows/SapiService.cpp
@@ -32,7 +32,7 @@ class SapiCallback final : public nsISpeechTaskCallback {
         mSpeakTextLen(aSpeakTextLen),
         mCurrentIndex(0),
         mStreamNum(0) {
-    mStartingTime = GetTickCount();
+    mStartingTime = TimeStamp::Now();
   }
 
   NS_DECL_CYCLE_COLLECTING_ISUPPORTS
@@ -48,6 +48,11 @@ class SapiCallback final : public nsISpeechTaskCallback {
  private:
   ~SapiCallback() {}
 
+  float GetTimeDurationFromStart() const {
+    TimeDuration duration = TimeStamp::Now() - mStartingTime;
+    return duration.ToSeconds();
+  }
+
   // This pointer is used to dispatch events
   nsCOMPtr<nsISpeechTask> mTask;
   RefPtr<ISpVoice> mSapiClient;
@@ -56,7 +61,7 @@ class SapiCallback final : public nsISpeechTaskCallback {
   uint32_t mSpeakTextLen;
 
   // Used for calculating the time taken to speak the utterance
-  double mStartingTime;
+  TimeStamp mStartingTime;
   uint32_t mCurrentIndex;
 
   ULONG mStreamNum;
@@ -82,7 +87,7 @@ SapiCallback::OnPause() {
     // from chrome process yet.
     return NS_ERROR_FAILURE;
   }
-  mTask->DispatchPause(GetTickCount() - mStartingTime, mCurrentIndex);
+  mTask->DispatchPause(GetTimeDurationFromStart(), mCurrentIndex);
   return NS_OK;
 }
 
@@ -96,7 +101,7 @@ SapiCallback::OnResume() {
     // from chrome process yet.
     return NS_ERROR_FAILURE;
   }
-  mTask->DispatchResume(GetTickCount() - mStartingTime, mCurrentIndex);
+  mTask->DispatchResume(GetTimeDurationFromStart(), mCurrentIndex);
   return NS_OK;
 }
 
@@ -127,23 +132,23 @@ void SapiCallback::OnSpeechEvent(const SPEVENT& speechEvent) {
       if (mSpeakTextLen) {
         mCurrentIndex = mSpeakTextLen;
       }
-      mTask->DispatchEnd(GetTickCount() - mStartingTime, mCurrentIndex);
+      mTask->DispatchEnd(GetTimeDurationFromStart(), mCurrentIndex);
       mTask = nullptr;
       break;
     case SPEI_TTS_BOOKMARK:
       mCurrentIndex = static_cast<ULONG>(speechEvent.lParam) - mTextOffset;
-      mTask->DispatchBoundary(u"mark"_ns, GetTickCount() - mStartingTime,
+      mTask->DispatchBoundary(u"mark"_ns, GetTimeDurationFromStart(),
                               mCurrentIndex, 0, 0);
       break;
     case SPEI_WORD_BOUNDARY:
       mCurrentIndex = static_cast<ULONG>(speechEvent.lParam) - mTextOffset;
-      mTask->DispatchBoundary(u"word"_ns, GetTickCount() - mStartingTime,
+      mTask->DispatchBoundary(u"word"_ns, GetTimeDurationFromStart(),
                               mCurrentIndex,
                               static_cast<ULONG>(speechEvent.wParam), 1);
       break;
     case SPEI_SENTENCE_BOUNDARY:
       mCurrentIndex = static_cast<ULONG>(speechEvent.lParam) - mTextOffset;
-      mTask->DispatchBoundary(u"sentence"_ns, GetTickCount() - mStartingTime,
+      mTask->DispatchBoundary(u"sentence"_ns, GetTimeDurationFromStart(),
                               mCurrentIndex,
                               static_cast<ULONG>(speechEvent.wParam), 1);
       break;
